--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.6",
     "headlessui": "^0.0.0",
+    "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
@@ -22,6 +23,8 @@
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@iconify-icon/react": "^3.0.0",
+    "@swc/cli": "^0.7.7",
+    "@swc/core": "^1.11.24",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
